openmediavault (7.7.15-1) stable; urgency=medium

  * Improve BTRFS backend implementation to handle RAID1C3 and RAID1C4
    profiles. Additionally unknown RAID profiles will not break the
    code anymore.
  * Issue #2001: Fix bug in network statistics.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 09 Aug 2025 14:06:01 +0200

openmediavault (7.7.14-1) stable; urgency=medium

  * Update locale files.
  * Make sure specific domain names, e.g. `local` or `test`, can't be
    applied via RPC.
  * Improve chrony systemd service configuration.
  * Issue #1994: Improve the list of exclusions for the SMB recycle bin.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 Aug 2025 12:40:01 +0200

openmediavault (7.7.13-2) stable; urgency=medium

  * Ignore `~/.toprc` when fetching `top` stats.
  * Several UI improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 21 Jul 2025 19:30:29 +0200

openmediavault (7.7.12-2) stable; urgency=medium

  * Update locale files.
  * Several UI improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 11 Jul 2025 11:25:09 +0200

openmediavault (7.7.11-1) stable; urgency=medium

  * Update locale files.
  * Several UI improvements.
  * Improve the `Diagnostics | Processes` page.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 02 Jul 2025 15:28:20 +0200

openmediavault (7.7.10-1) stable; urgency=medium

  * Add `ID` column, hidden by default, to the `User/Group Permissions` table
    on the `Storage | Shared Folders | ACL` page. Additionally display the UID
    and GID in the `Owner` and `Group` dropdown boxes.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Jun 2025 21:25:43 +0200

openmediavault (7.7.9-1) stable; urgency=medium

  * Update locale files.
  * Add UDEV rule to fix the duplicate serial number issue for external SATA
    hard drive adapter cable PA023U3.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 03 Jun 2025 19:27:02 +0200
